<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Báo 247</string>
    <string name="app_name_vn">Báo 247</string>

    <!--    https://drive.google.com/file/d/1femuL17MUTz7t0yqUkMWB5yCea1W6kqI/view?usp=sharing-->
    <string name="link_gg_drive" tools:ignore="Typos"><![CDATA[https://drive.google.com/uc?export=download&id=1femuL17MUTz7t0yqUkMWB5yCea1W6kqI]]></string><!--no need to edit this-->
    <string name="link_cover"><![CDATA[https://live.staticflickr.com/4380/35997985613_8fd2eab2d9_c.jpg]]></string>

    <!--https://apps.admob.com/v2/apps/9723459505/overview-->
    <string name="str_b">ca-app-pub-3165963943681013/4359452188</string>
    <string name="str_f">ca-app-pub-3165963943681013/5784214494</string>
    <!--    <string name="str_reward">a</string>-->
    <string name="str_app_id">ca-app-pub-3165963943681013~9723459505</string>

    <string name="deny">Từ chối</string>
    <string name="yes">Vâng</string>
    <string name="setting">Cài đặt</string>
    <string name="need_permisson">Cần cấp quyền</string>
    <string name="need_permisson_to_use_app">Cần cấp quyền để dùng được ứng dụng</string>
    <string name="app_is_not_ready">Server đang bảo trì, vui lòng thử lại sau</string>
    <string name="check_ur_connection">Vui lòng kiểm tra kết nối của bạn</string>
    <string name="warning">Thông báo</string>
    <string name="press_again_to_exit">Nhấn thêm lần nữa để thoát ứng dụng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rate_app">Đánh giá</string>
    <string name="more_app">Thêm</string>
    <string name="facebook_fanpage">Facebook fanpage</string>
    <string name="share_app">Chia sẻ</string>
    <string name="home">Trang chủ</string>
    <string name="exit">Thoát</string>
    <string name="try_again">Thử lại</string>
    <string name="right_drawer">Right Drawer</string>
    <string name="chat_with_dev">Hỗ trợ 24/7</string>
    <string name="donation">Donation</string>
    <string name="check_out">Check out</string>
    <string name="github">Github</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="small_thumb">Trang tin thu gọn</string>
    <string name="setting_success">Đã cài đặt thành công</string>
    <string name="is_grid_view">Trình bày dạng lưới</string>
    <string name="lasted_news">Tin mới nhất</string>
    <string name="hot_news">Tin nổi bật</string>
    <string name="education">Giáo dục</string>
    <string name="law">Pháp luật</string>
    <string name="sport">Thể thao</string>
    <string name="entertaiment">Giải trí</string>
    <string name="startup">Startup</string>
    <string name="business">Kinh doanh</string>
    <string name="news">Thời sự</string>
    <string name="global">Thế giới</string>
    <string name="most_viewed_news">Tin xem nhiều</string>
    <string name="fun_news">Cười</string>
    <string name="chat_news">Tâm sự</string>
    <string name="idea">Ý kiến</string>
    <string name="car_bike">Ô tô xe máy</string>
    <string name="technical">Số hóa</string>
    <string name="science">Khoa học</string>
    <string name="travel">Du lịch</string>
    <string name="family">Gia đình</string>
    <string name="healthy">Sức khỏe</string>
    <string name="custom_your_feed">Sắp xếp chủ đề của bạn</string>
    <string name="drag_feed">Kéo thả chủ đề để sắp xếp theo ý của bạn</string>
    <string name="delete_db">Xóa dữ liệu offline</string>
    <string name="delete_db_msg">Bạn có muốn xóa toàn bộ dữ liệu đã tải?</string>
    <string name="delete">Xóa</string>
    <string name="no">Không</string>
    <string name="delete_successfully">Đã xóa thành công</string>
    <string name="this_is_last_page">Đây đã là trang cuối</string>
    <string name="select_gift">Lựa chọn phần thưởng</string>
    <string name="now_you_get">Hiện tại, bạn đang có</string>
    <string name="viettel">Viettel</string>
    <string name="c_50k">50k</string>
    <string name="c_200k">200k</string>
    <string name="c_500k">500k</string>
    <string name="not_valid_money">Só dư chưa đủ, vui lòng thử lại sau</string>
    <string name="cannot_change_money">Hiện tại không thể thưc hiện giao dịch do server đang bảo trì, vui lòng thử lại sau</string>
    <string name="mobifone">MobiFone</string>
    <string name="vinaphone">Vinaphone</string>
    <string name="photo_collection">Bộ sưu tập</string>
    <string name="confirm_vn">Đồng ý</string>
    <string name="my_gift">Quà của tôi</string>
    <string name="history">Lịch sử giao dịch</string>

</resources>
